force-app/main/default/objects/Alert__c/fields/Age_Alert__c.field-meta.xml
<CustomField>
    <fullName>Age_Alert__c</fullName>
    <formula>NOW() - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Alert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>