force-app/main/default/objects/Alert__c/fields/Average_inflow__c.field-meta.xml
<CustomField>
    <fullName>Average_inflow__c</fullName>
    <label>Average inflow</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>