force-app/main/default/objects/Alert__c/fields/Carrier_name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_name__c</fullName>
    <label>Carrier Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Colissimo</fullName>
            </value>
            <value>
                <fullName>Chronopost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>