force-app/main/default/objects/Alert__c/fields/Contractual_threshold__c.field-meta.xml
<CustomField>
    <fullName>Contractual_threshold__c</fullName>
    <formula>pudo__r.Seuil_contractuel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contractual threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>