force-app/main/default/objects/Alert__c/fields/DemoTest__c.field-meta.xml
<CustomField>
    <fullName>DemoTest__c</fullName>
    <label>DemoTest</label>
    <length>44</length>
    <type>Text</type>
</CustomField>