force-app/main/default/objects/Alert__c/fields/Detected_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Detected_Closed_Date__c</fullName>
    <label>Detected Closed Date</label>
    <type>Date</type>
</CustomField>