force-app/main/default/objects/Alert__c/fields/Exceeding_rate__c.field-meta.xml
<CustomField>
    <fullName>Exceeding_rate__c</fullName>
    <label>Exceeding rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>