force-app/main/default/objects/Alert__c/fields/International_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>International_Site_Id__c</fullName>
    <label>International Site Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>