force-app/main/default/objects/Alert__c/fields/Max_threshold__c.field-meta.xml
<CustomField>
    <fullName>Max_threshold__c</fullName>
    <formula>pudo__r.Seuil_calcule__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>