force-app/main/default/objects/Alert__c/fields/MessagePDA_ID__c.field-meta.xml
<CustomField>
    <fullName>MessagePDA_ID__c</fullName>
    <label>MessagePDA_ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>