force-app/main/default/objects/Alert__c/fields/Missguided_Rate__c.field-meta.xml
<CustomField>
    <fullName>Missguided_Rate__c</fullName>
    <label>Missguided Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>