force-app/main/default/objects/Alert__c/fields/Missguided_reason_pudo__c.field-meta.xml
<CustomField>
    <fullName>Missguided_reason_pudo__c</fullName>
    <label>Missguided Reason PUDO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>