force-app/main/default/objects/Alert__c/fields/Missguided_requalification__c.field-meta.xml
<CustomField>
    <fullName>Missguided_requalification__c</fullName>
    <label>Missguided Requalification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>