force-app/main/default/objects/Alert__c/fields/MsgPDA_Erreur_Message__c.field-meta.xml
<CustomField>
    <fullName>MsgPDA_Erreur_Message__c</fullName>
    <label>MsgPDA Erreur Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>