force-app/main/default/objects/Alert__c/fields/nom_de_la_cause__c.field-meta.xml
<CustomField>
    <fullName>nom_de_la_cause__c</fullName>
    <description>Nom de la cause de la requalification</description>
    <label>nom de la cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Passage du transporteur en dehors des horaires d&#39;ouverture</fullName>
            </value>
            <value>
                <fullName>Passage du transporteur en dehors des horaires d&#39;ouverture / qualif refus</fullName>
            </value>
            <value>
                <fullName>Surcharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>