force-app/main/default/objects/Alert__c/fields/Number_of_Missguided_Parcel__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Missguided_Parcel__c</fullName>
    <label>Number of Missguided Parcel</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>