force-app/main/default/objects/Alert__c/fields/pudo__c.field-meta.xml
<CustomField>
    <fullName>pudo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>PUDO</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Alerts</relationshipLabel>
    <relationshipName>Alertes</relationshipName>
    <type>Lookup</type>
</CustomField>