force-app/main/default/objects/Alert__c/fields/recurrence_index__c.field-meta.xml
<CustomField>
    <fullName>recurrence_index__c</fullName>
    <label>Recurrence index</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>