force-app/main/default/objects/Alert__c/fields/response_missguided_full_cause_closure__c.field-meta.xml
<CustomField>
    <fullName>response_missguided_full_cause_closure__c</fullName>
    <label>Response missguided full cause closure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>