force-app/main/default/objects/Alert__c/fields/response_new_Contractual_threshold__c.field-meta.xml
<CustomField>
    <fullName>response_new_Contractual_threshold__c</fullName>
    <label>Response new Contractual threshold</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>