force-app/main/default/objects/Alert__c/fields/response_overload_capacity_reach__c.field-meta.xml
<CustomField>
    <fullName>response_overload_capacity_reach__c</fullName>
    <label>Response overload capacity reach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>