force-app/main/default/objects/Alert__c/fields/Retour_Msg_PDA_Trait__c.field-meta.xml
<CustomField>
    <fullName>Retour_Msg_PDA_Trait__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retour Message PDA Traité</label>
    <type>Checkbox</type>
</CustomField>