force-app/main/default/objects/Alert__c/fields/saturation_rate__c.field-meta.xml
<CustomField>
    <fullName>saturation_rate__c</fullName>
    <label>Saturation rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>