force-app/main/default/objects/Alert__c/fields/Source_de_la_modification__c.field-meta.xml
<CustomField>
    <fullName>Source_de_la_modification__c</fullName>
    <label>Source de la modification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>