force-app/main/default/objects/Alert__c/fields/TemplateIdMsgPudo__c.field-meta.xml
<CustomField>
    <fullName>TemplateIdMsgPudo__c</fullName>
    <formula>IF(AND((ISPICKVAL(alert_type__c , &#39;2&#39;)),(ISPICKVAL(Missguided_Type__c  , &#39;2&#39;)),(ISPICKVAL(Missguided_reason_pudo__c, &#39;2&#39; ))), &#39;DevoyePartielRefus&#39;,
IF(AND((ISPICKVAL(alert_type__c , &#39;2&#39;)),(ISPICKVAL(Missguided_Type__c  , &#39;2&#39;)),(ISPICKVAL(Missguided_reason_pudo__c, &#39;1&#39; ))), &#39;DevoyePartielFermeture&#39;,
IF(AND((ISPICKVAL(alert_type__c , &#39;2&#39;)),(ISPICKVAL(Missguided_Type__c  , &#39;1&#39;)), (ISPICKVAL(Missguided_reason_pudo__c, &#39;2&#39; ))), &#39;DevoyeCompletRefus&#39;,
IF(AND((ISPICKVAL(alert_type__c , &#39;2&#39;)),(ISPICKVAL(Missguided_Type__c  , &#39;1&#39;)), (ISPICKVAL(Missguided_reason_pudo__c, &#39;1&#39; ))), &#39;DevoyeCompletFermeture&#39;,
IF((ISPICKVAL(alert_type__c , &#39;1&#39;)), &#39;Surcharge&#39;,&#39;&#39;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TemplateIdMsgPudo</label>
    <type>Text</type>
</CustomField>