force-app/main/default/objects/Alert__c/fields/TemplateKeyMsgPDA__c.field-meta.xml
<CustomField>
    <fullName>TemplateKeyMsgPDA__c</fullName>
    <label>TemplateKeyMsgPDA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Surcharge</fullName>
            </value>
            <value>
                <fullName>DevoyeCompletFermeture</fullName>
            </value>
            <value>
                <fullName>DevoyePartielFermeture</fullName>
            </value>
            <value>
                <fullName>DevoyeCompletRefus</fullName>
            </value>
            <value>
                <fullName>DevoyePartielRefus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>